log/build_2024-04-11_22-59-55/aruco_publisher/stdout_stderr.log
running egg_info
writing ../../build/aruco_publisher/aruco_publisher.egg-info/PKG-INFO
writing dependency_links to ../../build/aruco_publisher/aruco_publisher.egg-info/dependency_links.txt
writing entry points to ../../build/aruco_publisher/aruco_publisher.egg-info/entry_points.txt
writing requirements to ../../build/aruco_publisher/aruco_publisher.egg-info/requires.txt
writing top-level names to ../../build/aruco_publisher/aruco_publisher.egg-info/top_level.txt
reading manifest file '../../build/aruco_publisher/aruco_publisher.egg-info/SOURCES.txt'
writing manifest file '../../build/aruco_publisher/aruco_publisher.egg-info/SOURCES.txt'
running build
running build_py
copying aruco_publisher/aruco_detector.py -> /home/timoha/KSAROmni/build/aruco_publisher/build/lib/aruco_publisher
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/timoha/KSAROmni/build/aruco_publisher/build/lib/aruco_publisher/aruco_detector.py -> /home/timoha/KSAROmni/install/aruco_publisher/lib/python3.10/site-packages/aruco_publisher
byte-compiling /home/timoha/KSAROmni/install/aruco_publisher/lib/python3.10/site-packages/aruco_publisher/aruco_detector.py to aruco_detector.cpython-310.pyc
  File "/home/timoha/KSAROmni/install/aruco_publisher/lib/python3.10/site-packages/aruco_publisher/aruco_detector.py", line 55
    y_centerDiff = int (center_y/2.astype(np.int) - frame_height/2)
                                  ^
SyntaxError: invalid decimal literal

running install_data
running install_egg_info
removing '/home/timoha/KSAROmni/install/aruco_publisher/lib/python3.10/site-packages/aruco_publisher-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/aruco_publisher/aruco_publisher.egg-info to /home/timoha/KSAROmni/install/aruco_publisher/lib/python3.10/site-packages/aruco_publisher-0.0.0-py3.10.egg-info
running install_scripts
Installing aruco_detector script to /home/timoha/KSAROmni/install/aruco_publisher/lib/aruco_publisher
writing list of installed files to '/home/timoha/KSAROmni/build/aruco_publisher/install.log'
